--- a/03_project/01_natours_example.html
+++ b/03_project/01_natours_example.html
@@ -12,14 +12,14 @@
     <body>
         <header class="header">
 
-            <div class="logo">
-                <img src="images/logo-white.png" class="logo__img">
+            <div class="header__logo-box">
+                <img src="images/logo-white.png" class="header__logo">
             </div>
 
-            <div class="text-box">
+            <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary__main">Outdoors</span>
-                    <span class="heading-primary__sub">is where life happens</span>
+                    <span class="heading-primary--main">Outdoors</span>
+                    <span class="heading-primary--sub">is where life happens</span>
                 </h1>
 
                 <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
